--- a/site_using_git.html
+++ b/site_using_git.html
@@ -6,6 +6,7 @@
     <title>Practice git and initial html & css</title>
 </head>
 <body>
-    
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate debitis eum aliquid nisi obcaecati esse officiis recusandae quasi? Quia laboriosam accusamus voluptatem tempore magni molestias vero voluptate amet hic optio.</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus inventore expedita ab illo! Vitae debitis facere expedita alias eaque voluptas veniam perspiciatis doloribus nostrum repudiandae, ducimus dolore necessitatibus quibusdam corrupti?</p>
 </body>
 </html>
